@@ -1,5 +1,9 @@
 2017-10-23  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* sysdeps/sparc/sparc-ifunc.h (SPARC_ASM_IFUNC_DFLT,
+	SPARC_ASM_IFUNC1, SPARC_ASM_IFUNC2, SET, SPARC_ASM_VIS2_IFUNC,
+	SPARC_ASM_VIS3_IFUNC, SPARC_ASM_VIS3_VIS2_IFUNC): Remove macros.
+
 	* sysdeps/sparc/sparc64/cpu_relax.c: New file.
 	* sysdeps/sparc/sparc32/sparcv9/cpu_relax.c: Likewise.
 	* sysdeps/sparc/sparc64/cpu_relax.S: Remove file.
